fix navbar spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -47,7 +47,7 @@ nav {
     }
 
     .navbar-navlinks :not(:last-child) {
-        padding-right: 20px;
+        margin-right: 20px;
     }
 
 }
